--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,62 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* DOTS FLASHING ANIMATION */
+/*Huge thanks to @tobiasahlin at http://tobiasahlin.com/spinkit/ */
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spinner > div {
+  width: 8px;
+  height: 8px;
+  border-radius: 4px;
+  background-color: #395bb4;
+  margin-right: 4px;
+  -webkit-animation: sk-bouncedelay 1s infinite
+    cubic-bezier(0.65, 0.05, 0.36, 1) both;
+  animation: sk-bouncedelay 1s infinite cubic-bezier(0.65, 0.05, 0.36, 1) both;
+}
+
+.spinner .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+  border-radius: 4px;
+}
+
+.spinner .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+  border-radius: 4px;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
+    border-radius: 4px;
+  }
+  40% {
+    -webkit-transform: scale(1);
+    border-radius: 4px;
+  }
+}
+
+@keyframes sk-bouncedelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    border-radius: 4px;
+  }
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    border-radius: 4px;
+  }
+}
